# Picalor

./: .gitignore  MANIFEST.in  README.md  data_example.json  pyproject.toml  setup.cfg  setup.py
debian_package/: install_raspberry_pi_os.sh  picalor.service  picalor_httpd.service
debian_package/binary/DEBIAN/: control
docs/picalor_app/html/: dir_da61e3e9a357748887e3ca8d7c5a0c16.html  files.html  globals.html  globals_vars.html  index.html  index_8js.html  use_store_api_8js.html  vuetify_8js.html
docs/picalor_core/html/: annotated.html  classes.html  classpicalor_1_1__version_1_1_not_this_method.html  classpicalor_1_1__version_1_1_versioneer_config.html  classpicalor_1_1picalor__api_1_1_picalor_actions-members.html  classpicalor_1_1picalor__api_1_1_picalor_actions.html  classpicalor_1_1picalor__api_1_1_picalor_api-members.html  files.html  functions.html  (+46 more)
docs/picalor_hardware/: ibom.html
picalor_app/: Doxyfile  README.md  package.json
picalor_app/public/: index.html
picalor_app/src/: PicalorApp.vue  main.js
picalor_core/: Doxyfile
picalor_core/picalor/: __init__.py  picalor_api.py  picalor_core.py  picalor_default_config.toml  picalor_measurement.py  picalor_measurement_daemon.py  picalor_mqtt.py  picalor_state.py  picalor_xlsx.py
picalor_hardware/circuit_schematics_pcb/: ADC.kicad_sch  CHANGELOG.txt  Sensor_Bridge.kicad_sch  flow_sensors.kicad_sch  fp-info-cache  picalor_pcb.csv  picalor_pcb.kicad_pcb  picalor_pcb.kicad_prl  picalor_pcb.kicad_pro  picalor_pcb.kicad_sch  picalor_pcb.net  picalor_pcb.xml  v_ref_source.kicad_sch
test/: mqtt_test.sh
(+180 files in other folders)
