[metadata]
name = picalor
description = Picalor - Multi-Channel Heat Flow Calorimetry on the Raspberry Pi
url = https://github.com/ul-gh/Picalor
author = Ulrich Lukas
maintainer = Ulrich Lukas
maintainer_email = ul-gh@datenparkplatz.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
python_requires =
    >= 3
setup_requires =
    versioneer-518
    setuptools >= 38.3.0
install_requires = 
    numpy
    tomlkit
    paho-mqtt
    pigpio
    pipyadc
packages = find:
package_dir = 
    = picalor_core
include_package_data = True
scripts =
    picalor_core/picalor/scripts/picalor-mqtt-display

[options.packages.find]
where = picalor_core

[options.entry_points]
console_scripts =
    picalor = picalor.picalor_core:main
    picalor_httpd = picalor.scripts.picalor_httpd:main


[versioneer]
VCS = git
style = pep440
versionfile_source = picalor_core/picalor/_version.py
versionfile_build = picalor/_version.py
tag_prefix =
parentdir_prefix = picalor-
